// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with multiple communities 1`] = `
<div
  className="modal"
>
  <div
    className="modal-container"
  >
    <h1
      className="modal-header"
    >
      MAKE AN ANNOUNCEMENT
    </h1>
    <a>
      <Button
        className="close-button"
        onClick={[MockFunction]}
        small={true}
      >
        Go Back
      </Button>
      <Button
        className="send-button"
        onClick={[MockFunction]}
        small={true}
      >
        Send It
      </Button>
    </a>
  </div>
</div>
`;

exports[`renders correctly with multiple communities, where the current user is not always a moderator 1`] = `
<div
  className="modal"
>
  <div
    className="modal-container"
  >
    <h1
      className="modal-header"
    >
      MAKE AN ANNOUNCEMENT
    </h1>
    <span>
      <p
        className="modal-paragraph"
      >
        This means that all members of the 
         communities selected will receive an instant email and push notification about this Post.
      </p>
      <p
        className="modal-paragraph"
      >
        This will only be sent as an Announcement to the communities where you are a Moderator. For other communities it will be shared as a regular Post.
      </p>
    </span>
    <a>
      <Button
        className="close-button"
        onClick={[MockFunction]}
        small={true}
      >
        Go Back
      </Button>
      <Button
        className="send-button"
        onClick={[MockFunction]}
        small={true}
      >
        Send It
      </Button>
    </a>
  </div>
</div>
`;

exports[`renders correctly with one community 1`] = `
<div
  className="modal"
>
  <div
    className="modal-container"
  >
    <h1
      className="modal-header"
    >
      MAKE AN ANNOUNCEMENT
    </h1>
    <a>
      <Button
        className="close-button"
        onClick={[MockFunction]}
        small={true}
      >
        Go Back
      </Button>
      <Button
        className="send-button"
        onClick={[MockFunction]}
        small={true}
      >
        Send It
      </Button>
    </a>
  </div>
</div>
`;
